--- a/Productivity/index.html
+++ b/Productivity/index.html
@@ -23,28 +23,32 @@
     </div>
     <body>
         <div class="bodyish">
+            <label id="CharacterName" for=CharacterName>Character Name:</label>
+            <input type="text" id="CharacterName" name="CharacterName">
             <span>
                 <form>
-                    <label for="CharacterName">Character Name:</label><br>
-                    <input type="text" id="CharacterName" name="CharacterName"><br>
-                    <label for="CharacterClass">Class: </label><br>
+                    <label for="CharacterClass">Class & Level:</label><br>
                     <input type="text" id="CharacterClass" name="CharacterClass">
+                    <label for="Race">Race:</label><br>
+                    <input type="text" id="Race" name="Race"><br>
                 </form>
             </span>
+
             <span>
                 <form>
-                    <label for="CharacterName">Character Name:</label><br>
-                    <input type="text" id="CharacterName" name="CharacterName"><br>
-                    <label for="CharacterClass">Class: </label><br>
-                    <input type="text" id="CharacterClass" name="CharacterClass">
-                </form>
+                    <label for="Background">Background:</label><br>
+                    <input type="text" id="Backgruond" name="Background"><br>
+                    <label for="Alignment">Alignment:</label><br>
+                    <input type="text" id="Alignment" name="Alignment">
+                    </form>
             </span>
+
             <span>
                 <form>
-                    <label for="CharacterName">Character Name:</label><br>
-                    <input type="text" id="CharacterName" name="CharacterName"><br>
-                    <label for="CharacterClass">Class: </label><br>
-                    <input type="text" id="CharacterClass" name="CharacterClass">
+                    <label for="PlayerName">Player Name:</label><br>
+                    <input type="text" id="PlayerName" name="PlayerName"><br>
+                    <label for="EXP">EXP:</label><br>
+                    <input type="text" id="EXP" name="EXP">
                 </form>
             </span>
         </div>
