1/14 make real progress on web page

--- a/Productivity/index.html
+++ b/Productivity/index.html
@@ -40,7 +40,7 @@
                     <input type="text" id="Backgruond" name="Background"><br>
                     <label for="Alignment">Alignment:</label><br>
                     <input type="text" id="Alignment" name="Alignment">
-                    </form>
+                </form>
             </span>
 
             <span>
@@ -51,6 +51,30 @@
                     <input type="text" id="EXP" name="EXP">
                 </form>
             </span>
+        </div>
+        <div class="scores">
+            <span id="stuff">
+                <form>
+                    <h2>Ability Scores</h2>
+                    <label for="Strength">Strength:</label><br>
+                    <input type="text" id="Strength" name="Strength"><br>
+                    <label for="Dexterity">Dexterity:</label><br>
+                    <input type="text" id="Dexterity" name="Dexterity">
+                    <label for="Constitution">Constitution:</label><br>
+                    <input type="text" id="Constitution" name="Constitution">
+                    <label for="Intelligence">Intellegence:</label><br>
+                    <input type="text" id="Intelligence" name="Intelligence"><br>
+                    <label for="Wisdom">Wisdom:</label><br>
+                    <input type="text" id="Wisdom" name="Wisdom"><br>
+                    <label for="Charisma">Charisma:</label><br>
+                    <input type="text" id="Charisma" name="Charisma">
+                </form>
+            </span>
+        </div>
+        <div class = "Proficiencies">
+            <h2>Proficiencies</h2>
+            <label for="profs">Enter proficiencies (seperated by ", "):</label><br>
+            <input type="text" id="profs" name="profs">
         </div>
     </body>
 </html>
