Added the canvas script

--- a/Productivity/index.html
+++ b/Productivity/index.html
@@ -76,5 +76,15 @@
             <label for="profs">Enter proficiencies (seperated by ", "):</label><br>
             <input type="text" id="profs" name="profs">
         </div>
+        
+        <div>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+            <form>
+                <img src="Assets/blank_sheet.png"/>
+                <input type="text" id="inp"/>
+                <button type="submit">Save</button>
+            </form>
+        </canvas id="canvas" >
+    </div>
     </body>
 </html>
